compatibility-tests/compile-fail/tests/ui/duplication-provide.rs
use snafu::prelude::*;

#[derive(Debug, Snafu)]
struct Error {
    #[snafu(provide)]
    #[snafu(provide)]
    name: String,
}

fn main() {}
